--- a/Records.BLL/Records.BLL.csproj
+++ b/Records.BLL/Records.BLL.csproj
@@ -11,7 +11,12 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Records.DAL\Records.DAL.csproj" />
       <ProjectReference Include="..\Records.Data\Records.Data.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="13.0.1" />
     </ItemGroup>
 
 </Project>
